--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/GrupoContable/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/GrupoContable/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Contabilidad.ct_grupocble_Info
 @{
-    ViewBag.Title = "Anular grupo contable";
+    ViewBag.Title = "Consultar grupo contable";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -9,9 +9,52 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Anular", "GrupoContable", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "GrupoContable", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdGrupoCble)
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-9 col-md-1">
+                @if (@ViewBag.Nuevo == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "GrupoContable", new { Area = "Contabilidad" }, null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Modificar == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "GrupoContable", new { Area = "Contabilidad", IdGrupoCble = Model.IdGrupoCble }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Anular == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "GrupoContable", new { Area = "Contabilidad", IdGrupoCble = Model.IdGrupoCble }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -56,8 +99,9 @@
             </div>
         </div>
     </div>
+
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","GrupoContable",new { Area = "Contabilidad" },null)">Cancelar</a>
     </div>
     @section Scripts {
