--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/GrupoContable/_GridViewPartial_grupo_cble.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/GrupoContable/_GridViewPartial_grupo_cble.cshtml
@@ -3,7 +3,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_grupo_cble";
-        settings.CallbackRouteValues = new { Controller = "GrupoCble", Action = "GridViewPartial_grupo_cble" };
+        settings.CallbackRouteValues = new { Controller = "GrupoContable", Action = "GridViewPartial_grupo_cble", Nuevo = ViewBag.Nuevo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdGrupoCble";
 
@@ -62,20 +62,19 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdGrupoCble = DataBinder.Eval(tc.DataItem, "IdGrupoCble") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdGrupoCble = DataBinder.Eval(tc.DataItem, "IdGrupoCble") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdGrupoCble = DataBinder.Eval(tc.DataItem, "IdGrupoCble") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
+                if (ViewBag.Nuevo==true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    );
+                }
+
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -96,7 +95,7 @@
 
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
