--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/_GridViewPartial_Cierre_x_Modulo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/_GridViewPartial_Cierre_x_Modulo.cshtml
@@ -46,7 +46,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdModulo";
-            column.Caption = "Modulo";
+            column.Caption = "Modulo Cerrado";
             column.Width = Unit.Percentage(90);
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.EditorProperties().ComboBox(p =>
