--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PlanDeCuentas/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Core.Erp.Web.Helps
+﻿@model Core.Erp.Info.Contabilidad.ct_plancta_Info
+@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Consulta de plan de cuentas";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -15,5 +16,8 @@
             <a class="btn btn-primary" href="@Url.Action("Importar","PlanDeCuentas",new { Area = "Contabilidad", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
         </div>
     </div>
-    @Html.Action("GridViewPartial_plancta")
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+
+    @Html.Action("GridViewPartial_plancta", new { Nuevo = ViewBag.Nuevo })
 }
