--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/TipoComprobante/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/TipoComprobante/Anular.cshtml
@@ -77,6 +77,17 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group has-error">
+                    <label for="gc_Orden">Motivo de anulación*</label>
+                    @Html.TextBoxFor(q => q.MotiAnula, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.MotiAnula, "", new { @class = "form", @role = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","TipoComprobante",new { Area = "Contabilidad" },null)">Cancelar</a>
