--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/TipoComprobante/_GridViewPartial_comprobante_tipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/TipoComprobante/_GridViewPartial_comprobante_tipo.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_comprobante_tipo";
-        settings.CallbackRouteValues = new { Controller = "TipoComprobante", Action = "GridViewPartial_comprobante_tipo" };
+        settings.CallbackRouteValues = new { Controller = "TipoComprobante", Action = "GridViewPartial_comprobante_tipo", Nuevo = ViewBag.Nuevo };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdTipoCbte";
         //Configuración para que la grilla no muestre texto completo
@@ -61,20 +61,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "tc_Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdTipoCbte = DataBinder.Eval(tc.DataItem, "IdTipoCbte") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdTipoCbte = DataBinder.Eval(tc.DataItem, "IdTipoCbte") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdTipoCbte = DataBinder.Eval(tc.DataItem, "IdTipoCbte") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -95,7 +93,7 @@
 
             });
         });
-
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
