--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ClasificacionEBIT/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ClasificacionEBIT/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Contabilidad.ct_ClasificacionEBIT_Info
 @{
     ViewBag.Title = "Consulta de clasificaciones EBIT";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,8 @@
 
 @using (Html.BeginForm())
 {
+@Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-@Html.Action("GridViewPartial_ClasificacionEBIT")
+@Html.Action("GridViewPartial_ClasificacionEBIT", new { Nuevo = ViewBag.Nuevo })
 
 }
