--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/GrupoContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/GrupoContable/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Contabilidad.ct_grupocble_Info
 @{
     ViewBag.Title = "Consulta de grupos contables";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,8 +10,9 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_grupo_cble")
+    @Html.Action("GridViewPartial_grupo_cble", new { Nuevo = ViewBag.Nuevo })
 
 }
 
