--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Contabilidad.ct_periodo_Info
 @{
     ViewBag.Title = "Consulta de periodos contables";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,9 @@
 
 @using (Html.BeginForm())
 {
+@Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+@Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-@Html.Action("GridViewPartial_periodocontable")
+@Html.Action("GridViewPartial_periodocontable", new { Nuevo = ViewBag.Nuevo })
 
 }
