--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/TipoComprobante/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/TipoComprobante/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Contabilidad.ct_cbtecble_tipo_Info
 @{
     ViewBag.Title = "Consulta de tipos de comprobante";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -11,8 +11,10 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_comprobante_tipo")
+    @Html.Action("GridViewPartial_comprobante_tipo", new { Nuevo = ViewBag.Nuevo })
 }
 
 
