--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Facturacion.fa_cliente_tipo_Info
 @{
     ViewBag.Title = "Consulta de tipos de cliente";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,8 +9,10 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_clientetipo")
+    @Html.Action("GridViewPartial_clientetipo", new { Nuevo = ViewBag.Nuevo })
 
 
 }
