--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Facturacion.fa_TerminoPago_Info
 @{
     ViewBag.Title = "Consulta de término de pago";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,8 +10,8 @@
 
 @using (Html.BeginForm())
 {
-
-    @Html.Action("GridViewPartial_terminopago")
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_terminopago", new { Nuevo = ViewBag.Nuevo })
 
 
 }
