--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
@@ -243,19 +243,9 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    @*<button type="button" class="close" data-dismiss="modal">&times;</button>*@
                     <h4 class="modal-title">Conciliación de Anticipos</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="col-md-3">
-                                <div class="form-group">
-                                    <button type="button" class="btn btn-primary form-control " onclick="ConciliacionAnticipo();"> Ir a conciliación de anticipos </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="row">
                         <div class="col-md-12">
                             <div class="col-md-12">
@@ -266,10 +256,6 @@
                         </div>
                     </div>
                 </div>
-                @*<div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onclick="AddOC();">Aceptar</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                </div>*@
             </div>
 
         </div>
@@ -386,7 +372,6 @@
                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                            settings.Properties.AllowMouseWheel = false;
                            settings.Properties.ClientSideEvents.DateChanged = "function(s,e){CambiarVcto(); FechaRetencion.SetValue(s.GetValue());}";
-                           //settings.Properties.ClientSideEvents.DateChanged = "function(s,e){co_FechaContabilizacion.SetValue(s.GetValue());}";
                        }).GetHtml()
                         @Html.ValidationMessageFor(q => q.co_FechaFactura, "", new { @class = "text-danger" })
                     </div>
@@ -1047,12 +1032,6 @@
         }
     };
 
-    function ConciliacionAnticipo() {
-        var location = GetPathServer();
-        var win = window.open(location + "/CuentasPorPagar/ConciliacionAnticipoProveedor/Nuevo?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa, '_blank');
-        win.focus();
-    }
-
     function get_list_ConciliacionAnticipo() {
         if (IdProveedor.GetValue() > 0) {
             var datos = {
@@ -1074,6 +1053,7 @@
                     console.log(data);
                     if(data.length>0){
                         alert("Existen anticipos pendientes de conciliar");
+                        Gridview_ConciliacionAnticipoDeudas.PerformCallback();
                         $("#ConciliacionAnticipoModal").modal("show");
                     }
                     else{
