--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_ConciliacionAnticipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_ConciliacionAnticipo.cshtml
@@ -41,8 +41,8 @@
             if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
-        settings.Columns.Add("Tipo", "Tipo").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdOrdenPago", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("Tipo", "Tipo").Width = Unit.Percentage(15);
+        settings.Columns.Add("IdOrdenPago", "ID").Width = Unit.Percentage(7);
         settings.Columns.Add(column =>
         {
             column.FieldName = "Fecha";
@@ -55,10 +55,10 @@
                 sp.Width = Unit.Percentage(100);
             });
         });
-        settings.Columns.Add("ValorOP", "Valor").Width = Unit.Percentage(10);
-        settings.Columns.Add("MontoAplicado", "Monto Aplicado").Width = Unit.Percentage(10);
-        settings.Columns.Add("Saldo", "Saldo").Width = Unit.Percentage(10);
-        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(40);
+        settings.Columns.Add("ValorOP", "Total").Width = Unit.Percentage(7);
+        settings.Columns.Add("MontoAplicado", "Monto Aplicado").Width = Unit.Percentage(7);
+        settings.Columns.Add("Saldo", "Saldo").Width = Unit.Percentage(7);
+        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(30);
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
